# delta_4dof_package

./: .gitignore  README.md  RUN_DELTA_4DOF.desktop  RUN_DELTA_4DOF.sh  run_delta_control.sh  run_gazebo.sh
src/delta4_description/: CMakeLists.txt  package.xml
src/delta4_description/config/: joint_names_1.yaml
src/delta4_description/meshes/: 1.STL  11.STL  111.STL  12.STL  121.STL  2.STL  21.STL  211.STL  22.STL  221.STL  3.STL  31.STL  311.STL  32.STL  321.STL  41.STL  411.STL  4111.STL  41111.STL  411111.STL
src/delta4_description/models/: delta4_closed_loop.sdf  delta4_control_test.sdf  delta4_model_corrected.sdf
src/delta4_description/urdf/: 1.csv  1.urdf  1_control_base.urdf  1_raw_backup.urdf
src/delta4_description/worlds/: delta4_clean.world  delta4_fall_test.world  delta4_test.world
src/delta_bridge2/: CMakeLists.txt  package.xml
src/delta_bridge2/src/: delta_bridge2_node.cpp  feedback_bridge_node.cpp
src/delta_control/: package.xml  setup.cfg  setup.py
src/delta_control/delta_control/: gui.py  kinematics.py  workspace.py  workspace_benchmark.py
src/delta_control/launch/: delta_control.launch.py
src/descripe/: CMakeLists.txt  README.txt  close_loops.sh  package.xml
src/descripe/launch/: display.launch  gazebo.launch
src/descripe/meshes/: 1.STL  111.STL  121.STL  21.STL  22.STL  32.STL  321.STL  41.STL  411.STL  4111.STL  411111.STL
src/descripe/models/descripe/: model.config  model.sdf  model_before_fix_base.sdf  model_before_rename_joint.sdf
src/descripe/models/descripe/meshes/: 11.STL  12.STL  2.STL  211.STL  221.STL  3.STL  31.STL  311.STL  4.STL  41111.STL  end.STL
src/descripe/urdf/: descripe.csv  descripe.urdf
src/descripe/worlds/: descripe_test.world  descripe_test_before_pose.world
src/gz_attach_links/models/biglide/: biglide.sdf
src/gz_attach_links/src/: unroll_loops
src/gz_delta_controller2/: CMakeLists.txt  package.xml
src/gz_delta_controller2/include/gz_delta_controller2/: DeltaMotorController2.hh
src/gz_delta_controller2/src/: DeltaMotorController2.cc
