<?xml version="1.0"?>
<package format="3">
  <name>delta4_description</name>
  <version>0.0.1</version>
  <description>URDF description package for Delta 4DOF robot</description>

  <maintainer email="tuan@todo.todo">tuan</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
