<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delta_control</name>
  <version>0.1.0</version>
  <description>Cartesian jog and trajectory GUI for the descripe Delta robot.</description>
  <maintainer email="tuan@todo.todo">tuan</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <exec_depend>delta_bridge2</exec_depend>
  <exec_depend>gz_delta_controller2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
